Anabasis.Deployment/kustomize/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    group: unknown-group
  name: unknown-namespace
