Anabasis.Deployment/kustomize/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: unknown-namespace
  name: unknown-name
  labels:
    app: unknown-name
    release: unknown-release
    group: unknown-group
spec:
  replicaCount: 3
  selector:
    matchLabels:
      app: unknown-name
      release: unknown-release
      group: unknown-group
  template:
    metadata:
      labels:
        app: unknown-name
        release: unknown-release
    spec:
      containers:
        - name: unknown-name
          image: unknown-image-name
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: health
              containerPort: 1337
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            timeoutSeconds: 30
            initialDelaySeconds: 30
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            timeoutSeconds: 15
            initialDelaySeconds: 30
            periodSeconds: 20
      imagePullSecrets:
      - name: registrysecret
