Anabasis.Deployment/kustomize/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    release: 1.0.67
  name: svc-anabasis-test-group
  namespace: anabasis-test-group
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: anabasis-deployment-test-app
    release: 1.0.67
  type: ClusterIP
